--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
     <TextView
         android:id="@+id/optionOne"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="50dp"
         android:layout_below="@id/flashcard_question"
         android:background="#D9E650"
         android:text="@string/optionOne"
@@ -33,7 +33,7 @@
     <TextView
         android:id="@+id/optionTwo"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="50dp"
         android:layout_below="@id/optionOne"
         android:background="#D9E650"
         android:text="@string/optionTwo"
@@ -44,13 +44,22 @@
     <TextView
         android:id="@+id/flashcard_answer"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="50dp"
         android:layout_below="@id/optionTwo"
         android:textColor="#000000"
         android:text="@string/answerOne"
         android:background="#D9E650"
         android:textAlignment="center"
         android:textSize="30sp"/>
+
+    <ImageView
+        android:id="@+id/plusbtn"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_below="@id/flashcard_answer"
+        android:layout_marginTop="20dp"
+        android:src="@drawable/plusbttn"
+        android:contentDescription="addItem" />
 
     <TextView
         android:id="@+id/answer_side"
@@ -64,4 +73,6 @@
         android:textColor="@color/red"
         android:textSize="40sp"
         android:visibility="invisible"/>
+
+
 </android.widget.RelativeLayout>
