completed the required features for lab 3

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -54,22 +54,24 @@
         android:textColor="#000000"
         android:textSize="30sp" />
 
+
     <ImageView
         android:id="@+id/plusbtn"
-        android:layout_width="100dp"
-        android:layout_height="50dp"
+        android:layout_width="549dp"
+        android:layout_height="80dp"
         android:layout_below="@id/flashcard_answer"
-        android:layout_marginTop="155dp"
-        android:src="@drawable/plusbttn"
-        android:contentDescription="addItem" />
-
+        android:layout_marginLeft="-200dp"
+        android:layout_marginTop="120dp"
+        android:contentDescription="addItem"
+        android:src="@drawable/plusbttn" />
 
     <ImageView
         android:id="@+id/nextbtn"
-        android:layout_width="match_parent"
-        android:layout_height="117dp"
+        android:layout_width="110dp"
+        android:layout_height="59dp"
         android:layout_below="@id/optionTwo"
-        android:layout_marginTop="86dp"
+        android:layout_marginLeft="250dp"
+        android:layout_marginTop="103dp"
         android:foregroundGravity="center"
         android:src="@drawable/nextbtn" />
 
@@ -88,12 +90,23 @@
 
     <ImageView
         android:id="@+id/editbtn"
-        android:layout_width="match_parent"
-        android:layout_height="151dp"
+        android:layout_width="139dp"
+        android:layout_height="107dp"
         android:layout_below="@id/flashcard_answer"
-        android:layout_marginTop="121dp"
+        android:layout_marginLeft="-113dp"
+        android:layout_marginTop="122dp"
+        android:layout_toRightOf="@id/plusbtn"
         android:contentDescription="edit item"
         android:src="@drawable/editbtn"
         android:visibility="invisible" />
+
+    <ImageView
+        android:id="@+id/deletebtn"
+        android:layout_width="324dp"
+        android:layout_height="35dp"
+        android:layout_below="@id/flashcard_answer"
+        android:layout_marginLeft="-100dp"
+        android:layout_marginTop="46dp"
+        android:src="@drawable/deletebtn" />
 
 </android.widget.RelativeLayout>
