--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#D81B60</color>
     <color name = "green">#00ff00</color>
     <color name = "red">#FF0000</color>
+    <color name = "regular">#D9E650</color>
 </resources>
