--- a/app/src/main/res/layout/activity_add_card.xml
+++ b/app/src/main/res/layout/activity_add_card.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="-500dp"
-    tools:context=".addCardActivity">
+    tools:context=".activities.addCardActivity">
 
     <TextView
         android:id="@+id/explains"
