--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,7 @@
     <color name = "green">#00ff00</color>
     <color name = "red">#FF0000</color>
     <color name = "regular">#D9E650</color>
+    <color name = "black">#000000</color>
+    <color name = "white">#ffff</color>
+    <color name = "gray">#6b818c</color>
 </resources>
