--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,19 +8,29 @@
 
     <TextView
         android:id="@+id/flashcard_question"
-        android:layout_width="400dp"
+        android:layout_width="700dp"
         android:layout_height="250dp"
         android:layout_marginBottom="10dp"
         android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginRight="50dp"
+        android:layout_marginTop="40dp"
         android:background="@drawable/card_background"
         android:elevation="7dp"
         android:gravity="center"
         android:text="@string/questionOne"
         android:textColor="#000000"
-        android:textSize="45sp" />
+        android:textSize="44sp" />
 
+    <ImageView
+        android:id="@+id/plusbtn"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_above="@id/nextbtn"
+        android:layout_marginLeft="350dp"
+        android:layout_marginBottom="200dp"
+
+        android:src="@drawable/plus_bold"
+        android:visibility="visible" />
 
     <TextView
         android:id="@+id/optionOne"
@@ -64,7 +74,7 @@
         android:textSize="30sp" />
 
     <ImageView
-        android:id="@+id/plusbtn"
+        android:id="@+id/delete"
         android:layout_width="239dp"
         android:layout_height="131dp"
         android:layout_below="@id/flashcard_answer"
@@ -72,7 +82,7 @@
         android:layout_marginTop="39dp"
 
         android:contentDescription="addItem"
-        android:src="@drawable/plusbttn" />
+        android:src="@drawable/deletebtn" />
 
     <ImageView
         android:id="@+id/nextbtn"
@@ -89,7 +99,7 @@
         android:layout_height="250dp"
         android:layout_marginBottom="10dp"
         android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
+        android:layout_marginRight="100dp"
         android:layout_marginTop="10dp"
         android:background="@drawable/card_background"
         android:elevation="7dp"
@@ -113,16 +123,7 @@
         android:src="@drawable/editbtn"
         android:visibility="visible" />
 
-    <!--<ImageView
-        android:id="@+id/deletebtn"
-        android:layout_width="365dp"
-        android:layout_height="106dp"
-        android:layout_below="@id/flashcard_answer"
-        android:layout_marginLeft="-100dp"
-        android:layout_marginTop="37dp"
-        android:src="@drawable/deletebtn"
-        android:visibility="invisible" />
 
-   -->
+
 
 </android.widget.RelativeLayout>
