--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,12 +8,12 @@
 
     <TextView
         android:id="@+id/flashcard_question"
-        android:layout_width="700dp"
-        android:layout_height="250dp"
-        android:layout_marginBottom="10dp"
+        android:layout_width="358dp"
+        android:layout_height="247dp"
         android:layout_marginLeft="20dp"
-        android:layout_marginRight="50dp"
         android:layout_marginTop="40dp"
+        android:layout_marginRight="50dp"
+        android:layout_marginBottom="1dp"
         android:background="@drawable/card_background"
         android:elevation="7dp"
         android:gravity="center"
@@ -21,15 +21,15 @@
         android:textColor="#000000"
         android:textSize="44sp" />
 
-    <ImageView
-        android:id="@+id/plusbtn"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+    <Button
+        android:id="@+id/delete"
+        android:layout_width="116dp"
+        android:layout_height="wrap_content"
         android:layout_above="@id/nextbtn"
-        android:layout_marginLeft="350dp"
-        android:layout_marginBottom="200dp"
-
-        android:src="@drawable/plus_bold"
+        android:layout_marginLeft="280dp"
+        android:layout_marginBottom="247dp"
+        android:textSize="20dp"
+        android:text="delete"
         android:visibility="visible" />
 
     <TextView
@@ -37,7 +37,7 @@
         android:layout_width="300dp"
         android:layout_height="60dp"
         android:layout_below="@id/flashcard_question"
-        android:layout_marginTop="41dp"
+        android:layout_marginTop="29dp"
         android:layout_marginBottom="10dp"
         android:layout_marginLeft="20dp"
         android:background="@drawable/answer_background"
@@ -74,7 +74,7 @@
         android:textSize="30sp" />
 
     <ImageView
-        android:id="@+id/delete"
+        android:id="@+id/plusbtn"
         android:layout_width="239dp"
         android:layout_height="131dp"
         android:layout_below="@id/flashcard_answer"
@@ -82,7 +82,7 @@
         android:layout_marginTop="39dp"
 
         android:contentDescription="addItem"
-        android:src="@drawable/deletebtn" />
+        android:src="@drawable/plus_bold" />
 
     <ImageView
         android:id="@+id/nextbtn"
